--- a/chat/views/index.ejs
+++ b/chat/views/index.ejs
@@ -1,11 +1,94 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
   <head>
-    <title><%= title %></title>
-    <link rel='stylesheet' href='/stylesheets/style.css' />
+    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+    <!-- Meta, title, CSS, favicons, etc. -->
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+
+    <title>Paykitty </title>
+
+    <!-- Bootstrap -->
+    <link href="/stylesheets/bootstrap.min.css" rel="stylesheet">
+    <!-- Font Awesome -->
+    <link href="/stylesheets/font-awesome.min.css" rel="stylesheet">
+    <!-- Animate.css -->
+    <link href="/stylesheets/animate.min.css" rel="stylesheet">
+
+    <!-- Custom Theme Style -->
+    <link href="/stylesheets/custom.min.css" rel="stylesheet">
   </head>
-  <body>
-    <h1><%= title %></h1>
-    <p>Welcome to <%= title %></p>
+<style type="text/css">
+body{
+  background-color: #FFFACD
+}
+
+.radio-group{
+    margin-bottom: 15px;
+    
+}
+
+</style>
+  <body class="login">
+    <div>
+      <a class="hiddenanchor" id="signup"></a>
+      <a class="hiddenanchor" id="signin"></a>
+
+      <div class="login_wrapper">
+        <div class="animate form login_form">
+          <section class="login_content">
+            <div class='form'>
+            <form class="form-horizontal" action="" method='post'>
+              <h1>Login</h1>
+              
+              <div class="form-group">
+                    <div class="col-xs-12  ">
+                        <div class="input-group">
+                           <span class="input-group-addon"><span class="glyphicon glyphicon-user"></span></span>
+                             <input type="text" class="form-control" name="Loginuser" id="username" placeholder="用户名" autocomplete="off" />
+                        </div>
+                    </div>
+                </div>
+              <div class="form-group">
+                    <div class="col-xs-12  ">
+                        <div class="input-group">
+                            <span class="input-group-addon"><span class="glyphicon glyphicon-lock"></span></span>
+                            <input type="password" class="form-control" name="Loginpass" id="password" placeholder="密码" autocomplete="off" />
+                        </div>
+                    </div>
+                </div>
+              <div class="form-group form-actions">
+                    <div class="col-lg-12  ">
+                        <button type="submit" class="btn btn-priamry btn-block btn-info"> &nbsp;Login&nbsp;</button>
+                    </div>
+              </div>
+              <div class="form-group">
+                    
+                    <div class="col-lg-12 link">
+                        <p class="text-center remove-margin"><small>Not an account yet?&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</small> <a href="/register" ><small>Register now!</small></a>
+                        </p>
+                    </div>
+                    <p align="center"><font color="red"><%= error %></font></p>
+                </div>
+
+              <div class="clearfix"></div>
+
+              <div class="separator">
+
+                <div class="clearfix"></div>
+                
+
+                <div>
+                  <h1><span class="glyphicon glyphicon-leaf" style="font-size: 26px;"></span> Chat</h1>
+                </div>
+              </div>
+            </form>
+          </div>
+          </section>
+        </div>
+
+      </div>
+    </div>
   </body>
 </html>
