--- a/chat/views/chat.ejs
+++ b/chat/views/chat.ejs
@@ -2,27 +2,88 @@
 <html>
   <head>
     <title>Chat</title>
-    <style>
-      * { margin: 0; padding: 0; box-sizing: border-box; }
-      body { font: 13px Helvetica, Arial; }
-      form { background: #000; padding: 3px; position: fixed; bottom: 0; width: 100%; }
-      form input { border: 0; padding: 10px; width: 90%; margin-right: .5%; }
-      form button { width: 9%; background: rgb(130, 224, 255); border: none; padding: 10px; }
-      #messages { list-style-type: none; margin: 0; padding: 0; }
-      #messages li { padding: 5px 10px; }
-      #messages li:nth-child(odd) { background: #eee; }
-    </style>
+    <link rel="stylesheet" href="/stylesheets/style.css"  type="text/css" />
+    <link rel="stylesheet" href="/stylesheets/bootstrap.css"  type="text/css" />
+
   </head>
   <body>
-    <div>
-      <div id="from"><%= AccountID %></div>
-    <ul id="messages"></ul>
-    <form action="">
-      <input id="m" autocomplete="off" /><button>Send</button>
-    </form>
-  </div>
-    <script src="/stylesheets/socket.io-1.2.0.js"></script>
-    <script src="/stylesheets/jquery-1.11.1.js"></script>
+    <div class="container">
+      <div class="row">
+        <div class="col-lg-2 col-md-2" >
+          <div class="row">
+            <div class="col-lg-4">
+              <img class=" portrait"src="/images/portrait.png"/>
+            </div>
+            <div id="from" class="col-lg-8 master-name"><%= AccountID %>
+            </div>
+          </div>
+          <div class="friend_list panel-group" id="accordion">
+             <div class="panel panel-default">
+              <div class="panel-heading">
+                <h1 class="panel-title">
+                  <a data-toggle="collapse" data-parent="#accordion" href="#collapseOne">
+                    friend
+                  </a>
+                </h1>
+              </div>
+              <div id="collapseOne" class="panel-collapse collapse in">
+                <div >
+                    <ul class="list-group">
+                        <li class="list-group-item">ads</li>
+                        <li class="list-group-item">ads</li>
+                        <li class="list-group-item">ads</li>
+                    </ul>
+                </div>
+              </div>
+            </div>
+            <div class="panel panel-default">
+              <div class="panel-heading">
+                <h1 class="panel-title">
+                  <a data-toggle="collapse" data-parent="#accordion" href="#collapsetwo">
+                    family
+                  </a>
+                </h1>
+              </div>
+              <div id="collapsetwo" class="panel-collapse collapse in">
+                <div >
+                    <ul class="list-group">
+                        <li class="list-group-item">ads</li>
+                        <li class="list-group-item">ads</li>
+                        <li class="list-group-item">ads</li>
+                    </ul>
+                </div>
+              </div>
+            </div>
+
+
+          </div>
+
+
+        </div>
+        <div class="col-lg-10 col-md-10  chatbox">
+          <div class="chatname">
+            <font size="4">Zprinze</font>
+            <p style="display:none">123</p>
+          </div>
+          <div>
+            <ul id="messages" class="chat-thread">
+          
+
+            </ul>
+          </div>
+          <div class= "input_form">
+            <form action="" method="post" class="form">
+              
+              <textarea id="m" class="form-control" rows="3"></textarea>
+              <button class="btn btn-default button_style" align="center" >Send</button>
+            </form>
+          </div>
+        </div>
+      </div>
+    </div>
+    <script src="/javascripts/socket.io-1.2.0.js"></script>
+    <script src="/javascripts/jquery.min.js"></script>
+    <script src="/javascripts/bootstrap.min.js"></script>
     <script>
       var socket = io();
       var from;
@@ -33,14 +94,14 @@
        
        
         socket.emit('private message', from, to, $('#m').val());
-        $('#messages').append($('<li>').text($('#m').val()));
+        $('#messages').append($('<li class="right_message">').text($('#m').val()));
         $('#m').val('');
 
         return false;
       });
       socket.on('to:'+from, function(data){
         console.log(data);
-        $('#messages').append('<li>'+data.from+'说'+data.message+'</li><li>');
+        $('#messages').append('<li class="left_message">'+data.from+'说'+data.message+'</li><li>');
       });
     </script>
   </body>
