消息框改为模态框

--- a/chat/views/friendlist.ejs
+++ b/chat/views/friendlist.ejs
@@ -8,6 +8,8 @@
     <link rel="stylesheet" href="/stylesheets/font-awesome.css"  type="text/css" />
     <link rel="stylesheet" href="/stylesheets/animate.min.css"  type="text/css" />
     <link rel="stylesheet" href="/stylesheets/stylechatlib.css"  type="text/css" />
+    <link rel="stylesheet" href="/stylesheets/smartMenu.css"  type="text/css" />
+
 
 
   </head>
@@ -152,6 +154,12 @@
     <script src="/javascripts/socket.io-1.2.0.js"></script>
     <script src="/javascripts/jquery.min.js"></script>
     <script src="/javascripts/bootstrap.min.js"></script>
+    <script src="/javascripts/jquery-smartMenu.js"></script>
+    <script type="text/javascript">
+
+      $(选择器).smartMenu(data, options);
+
+    </script>
     <script>
       var socket = io();
       var from;
