--- a/chat/views/register.ejs
+++ b/chat/views/register.ejs
@@ -7,7 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <title>Paykitty </title>
+    <title>Let's Chat!</title>
 
     <!-- Bootstrap -->
     <link href="/stylesheets/bootstrap.min.css" rel="stylesheet">
@@ -26,13 +26,13 @@ body {
     background-image:-moz-linear-gradient(bottom, #FFFFFF 0%, #FFFFF0 100%);
     background-image:-webkit-linear-gradient(bottom, #FFFFFF 0%, #FFFFF0 100%);
     background-image:-ms-linear-gradient(bottom, #6699FF 0%, #6699FF 100%);
-    
+
 
 
 }
 .radio-group{
     margin-bottom: 15px;
-    
+
 }
 
 </style>
@@ -56,7 +56,7 @@ body {
                         </div>
                     </div>
               </div>
-              
+
                     <div class="form-group">
                     <div class="col-xs-12">
                         <div class="input-group">
@@ -93,7 +93,7 @@ body {
                     </div>
                     </div>
 
-                
+
                     <div class="form-group">
                     <div class="col-xs-12">
                         <div class="input-group">
@@ -103,7 +103,7 @@ body {
                     </div>
                     </div>
 
-                   
+
 
                     <div class="form-group form-actions">
                     <div class="col-lg-12  ">
@@ -116,7 +116,7 @@ body {
               <div class="separator">
 
                 <div class="clearfix"></div>
-                
+
 
                 <div>
                   <h1><span class="glyphicon glyphicon-leaf" style="font-size: 26px;"></span> Chat</h1>
