--- a/chat/views/index.ejs
+++ b/chat/views/index.ejs
@@ -7,7 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <title>Paykitty </title>
+    <title>Let's Chat!</title>
 
     <!-- Bootstrap -->
     <link href="/stylesheets/bootstrap.min.css" rel="stylesheet">
@@ -26,7 +26,7 @@ body{
 
 .radio-group{
     margin-bottom: 15px;
-    
+
 }
 
 </style>
@@ -41,7 +41,7 @@ body{
             <div class='form'>
             <form class="form-horizontal" action="" method='post'>
               <h1>Login</h1>
-              
+
               <div class="form-group">
                     <div class="col-xs-12  ">
                         <div class="input-group">
@@ -64,9 +64,9 @@ body{
                     </div>
               </div>
               <div class="form-group">
-                    
+
                     <div class="col-lg-12 link">
-                        <p class="text-center remove-margin"><small>Not an account yet?&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</small> <a href="/register" ><small>Register now!</small></a>
+                        <p class="text-center remove-margin"><small>Not having an account yet?&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</small> <a href="/register" ><small>Register now!</small></a>
                         </p>
                     </div>
                     <p align="center"><font color="red"><%= error %></font></p>
@@ -77,7 +77,7 @@ body{
               <div class="separator">
 
                 <div class="clearfix"></div>
-                
+
 
                 <div>
                   <h1><span class="glyphicon glyphicon-leaf" style="font-size: 26px;"></span> Chat</h1>
