--- a/chat/views/search.ejs
+++ b/chat/views/search.ejs
@@ -79,7 +79,7 @@
     <button class="btn btn-primary btn-lg chuangkou" data-toggle="modal" 
    data-target="#myModal" style="display:none">
     </button>
-    <div class="modal fade" id="myModal" tabindex="-1" role="dialog" 
+<div class="modal fade" id="myModal" tabindex="-1" role="dialog" 
    aria-labelledby="myModalLabel" aria-hidden="true">
   <div class="modal-dialog">
     <div class="modal-content">
@@ -89,11 +89,12 @@
                   &times;
         </button>
         <h4 class="modal-title" id="myModalLabel">
-              Chat
+              You Chat
         </h4>
       </div>
       <div class="modal-body">
-            you have add friend successfully!
+        You have add friend successfully!
+            <!--You have had this friend! Please choose another friend to add!-->
       </div>
       <div class="modal-footer">
         <button type="button" class="btn btn-primary" data-dismiss="modal">
@@ -102,6 +103,7 @@
       </div>
     </div><!-- /.modal-content -->
   </div><!-- /.modal -->
+</div>
 
 
 
